catkin_ws/logs/backend/build.make.556.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp: In member function ‘virtual bool SLAM::SURF::match(const std::vector<cv::KeyPoint>&, const cv::Mat&, const std::vector<cv::KeyPoint>&, const cv::Mat&, std::vector<cv::DMatch>&) const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:65:2: error: ‘matcher’ is not a member of ‘cv’
  cv::matcher->match(descs1.descs2,matches);
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:65:28: error: ‘const class cv::Mat’ has no member named ‘descs2’
  cv::matcher->match(descs1.descs2,matches);
                            ^
make[2]: *** [CMakeFiles/frontend.dir/src/SURF.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
